# DynamicPipe

./: .gitignore  CMakeLists.txt  README.md
.cursor/rules/: development.mdc
.github/workflows/: ci.yml
examples/: basic_pipeline.cpp
executables/: CMakeLists.txt
include/: module.h  thread_scheduler.h
modules/: CMakeLists.txt
modules/file_manager/: CMakeLists.txt  file_chunk.h  file_manager_module.cpp  file_manager_module.h
modules/file_source/: CMakeLists.txt  file_source_module.cpp  file_source_module.h
modules/json_decoder/: CMakeLists.txt  json_decoder_module.cpp  json_decoder_module.h
tests/: test_file_modules.cpp  test_module.cpp  test_stress.cpp
